fixed dates in chart data

--- a/02A_data_exploration/explore_top40_charts.ipynb
+++ b/02A_data_exploration/explore_top40_charts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 165,
    "id": "3358e03a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 166,
    "id": "c7ca4242",
    "metadata": {},
    "outputs": [
@@ -58,23 +58,23 @@
        "      <th>duration</th>\n",
        "      <th>energy</th>\n",
        "      <th>...</th>\n",
-       "      <th>virginia_hip_hop</th>\n",
-       "      <th>vocal_house</th>\n",
-       "      <th>vocal_jazz</th>\n",
-       "      <th>washington_indie</th>\n",
-       "      <th>west_coast_rap</th>\n",
-       "      <th>world</th>\n",
        "      <th>worship</th>\n",
        "      <th>yacht_rock</th>\n",
        "      <th>yakut_pop</th>\n",
        "      <th>yodeling</th>\n",
+       "      <th>all_pop</th>\n",
+       "      <th>all_rock</th>\n",
+       "      <th>all_hiphop</th>\n",
+       "      <th>all_metal</th>\n",
+       "      <th>top3_genres</th>\n",
+       "      <th>not_top3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>7/7/97</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Hanson</td>\n",
        "      <td>Mmm Bop</td>\n",
        "      <td>0SdiiPkr02EUdekHZJkt580lnxrQAd9ZxbhBBe7d8FO8</td>\n",
@@ -88,17 +88,17 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7/7/97</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>Meredith Brooks</td>\n",
        "      <td>Bitch</td>\n",
        "      <td>2QmLFuIDtNDmmJY3OtvinN3i6qNxyVgIdUZTTi5m25EM</td>\n",
@@ -117,12 +117,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>7/7/97</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Spice Girls</td>\n",
        "      <td>Say You'll Be There</td>\n",
        "      <td>0uq5PttqEjj3IH1bzwcrXF1yTQ39my3MoNROlFw3RDNy</td>\n",
@@ -136,17 +136,17 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7/7/97</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>Mark Morrison</td>\n",
        "      <td>Return Of The Mack</td>\n",
        "      <td>6V3F8MZrOKdT9fU686ybE93jDdpx9PMlfMBS5tOBHFm9</td>\n",
@@ -165,12 +165,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7/7/97</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>Shawn Colvin</td>\n",
        "      <td>Sunny Came Home</td>\n",
        "      <td>0K7VN4aHxHcEb7PqkfoIVA4mOxpj82q6n3EO7HBZCelX</td>\n",
@@ -184,25 +184,25 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 456 columns</p>\n",
+       "<p>5 rows × 462 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     week  position           artist                 song  \\\n",
-       "0  7/7/97       1.0           Hanson              Mmm Bop   \n",
-       "1  7/7/97       2.0  Meredith Brooks                Bitch   \n",
-       "2  7/7/97       3.0      Spice Girls  Say You'll Be There   \n",
-       "3  7/7/97       4.0    Mark Morrison   Return Of The Mack   \n",
-       "4  7/7/97       5.0     Shawn Colvin      Sunny Came Home   \n",
+       "0  7/7/97         1           Hanson              Mmm Bop   \n",
+       "1  7/7/97         2  Meredith Brooks                Bitch   \n",
+       "2  7/7/97         3      Spice Girls  Say You'll Be There   \n",
+       "3  7/7/97         4    Mark Morrison   Return Of The Mack   \n",
+       "4  7/7/97         5     Shawn Colvin      Sunny Came Home   \n",
        "\n",
        "                                          combo  \\\n",
        "0  0SdiiPkr02EUdekHZJkt580lnxrQAd9ZxbhBBe7d8FO8   \n",
@@ -218,30 +218,30 @@
        "3  Mark MorrisonReturn Of The Mack       0.00631         0.715    213093   \n",
        "4      Shawn ColvinSunny Came Home       0.34200         0.558    264200   \n",
        "\n",
-       "   energy  ...  virginia_hip_hop  vocal_house  vocal_jazz  washington_indie  \\\n",
-       "0   0.937  ...                 0            0           0                 0   \n",
-       "1   0.886  ...                 0            0           0                 0   \n",
-       "2   0.679  ...                 0            0           0                 0   \n",
-       "3   0.833  ...                 0            0           0                 0   \n",
-       "4   0.579  ...                 0            0           0                 0   \n",
+       "   energy  ...  worship  yacht_rock  yakut_pop  yodeling  all_pop  all_rock  \\\n",
+       "0   0.937  ...        0           0          0         0        1         1   \n",
+       "1   0.886  ...        0           0          0         0        0         0   \n",
+       "2   0.679  ...        0           0          0         0        1         0   \n",
+       "3   0.833  ...        0           0          0         0        0         0   \n",
+       "4   0.579  ...        0           0          0         0        1         1   \n",
        "\n",
-       "   west_coast_rap  world  worship  yacht_rock  yakut_pop  yodeling  \n",
-       "0               0      0        0           0          0         0  \n",
-       "1               0      0        0           0          0         0  \n",
-       "2               0      0        0           0          0         0  \n",
-       "3               0      0        0           0          0         0  \n",
-       "4               0      0        0           0          0         0  \n",
+       "   all_hiphop  all_metal  top3_genres  not_top3  \n",
+       "0           0          0            1         0  \n",
+       "1           0          0            0         1  \n",
+       "2           0          0            1         0  \n",
+       "3           0          0            0         1  \n",
+       "4           0          0            1         0  \n",
        "\n",
-       "[5 rows x 456 columns]"
+       "[5 rows x 462 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top40 = pd.read_csv('../top40_charts_audio_data_sample.csv')\n",
+    "top40 = pd.read_csv('../top40_charts_audio.csv')\n",
     "top40.dropna(inplace=True)\n",
     "print(len(top40))\n",
     "top40.head()"
@@ -5571,7 +5571,7 @@
    "outputs": [],
    "source": [
     "# write df to csv\n",
-    "top40.to_csv('../top40_charts_genres.csv', index=False)"
+    "top40.to_csv('../top40_charts_audio.csv', index=False)"
    ]
   },
   {
